--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="dateofbirth">Date of Birth</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
+    <string name="editprofile">Edit Profile</string>
+    <string name="search">Search</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
